<?xml version="1.0"?>
<package format="2">
  <name>front_lidar_clustering</name>
  <version>1.12.0</version>
  <description>The front_lidar_clustering package</description>
  <maintainer email="lee.dk@kaist.ac.kr">ando</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>ackermann_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>jsk_rviz_plugins</depend>
</package>
